Fixed List of threads starts too low in IE 6 (bug 568756)

--- a/media/css/ie.css
+++ b/media/css/ie.css
@@ -10,3 +10,6 @@
     background-image: expression(this.previousSibling==null?'none':'default');
 }
 
+#content-inner {
+    width:679px;
+}
